[package]
name = "sbga-dec"
version = "0.2.2"
edition = "2021"
description = "Advanced sega hdd decryptor, written in rust"
authors = ["AsakuraMizu"]
readme = "README.md"

[dependencies]
aes = "0.8.4"
anyhow = "1"
cbc = { version = "0.1.2", default-features = false }
clap = { version = "4.5", features = ["derive"] }
const-hex = "1.14"
hex-literal = "1.0"
indicatif = "0.17"

[profile.release]
strip = true
lto = true
